--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,5 +1,5 @@
 name: Github actions demo
-on: [push]
+on: [ push ]
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
@@ -29,4 +29,4 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Execution des tests
-        run: mvn test
+        run: mvn -B test --file pom.xml
